--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
     <h2>Наши заказчики</h2>
     <div class="partners-wrapper" id="partners-wrapper">
         <ul class="partners-items" id="partners-items">
-            <li class="partners-item"><img src="resources/images/partners/door-han.webp" alt=""></li>
-            <li class="partners-item"><img src="resources/images/partners/автошкола-ника.webp" alt=""></li>
-            <li class="partners-item"><img src="resources/images/partners/админитсрация-гулькевичи.webp" alt=""></li>
-            <li class="partners-item"><img src="resources/images/partners/либирти-клининг.webp" alt=""></li>
-            <li class="partners-item"><img src="resources/images/partners/пэк.webp" alt=""></li>
-            <li class="partners-item"><img src="resources/images/partners/цмт.webp" alt=""></li>
-            <li class="partners-item"><img src="resources/images/partners/door-han.webp" alt=""></li>
-            <li class="partners-item"><img src="resources/images/partners/автошкола-ника.webp" alt=""></li>
-            <li class="partners-item"><img src="resources/images/partners/админитсрация-гулькевичи.webp" alt=""></li>
-            <li class="partners-item"><img src="resources/images/partners/либирти-клининг.webp" alt=""></li>
-            <li class="partners-item"><img src="resources/images/partners/пэк.webp" alt=""></li>
-            <li class="partners-item"><img src="resources/images/partners/цмт.webp" alt=""></li>
+            <li class="partners-item"><img src="resources/images/partners/1.jpg" alt=""></li>
+            <li class="partners-item"><img src="resources/images/partners/1.jpg" alt=""></li>
+            <li class="partners-item"><img src="resources/images/partners/1.jpg" alt=""></li>
+            <li class="partners-item"><img src="resources/images/partners/1.jpg" alt=""></li>
+            <li class="partners-item"><img src="resources/images/partners/1.jpg" alt=""></li>
+            <li class="partners-item"><img src="resources/images/partners/1.jpg" alt=""></li>
+            <li class="partners-item"><img src="resources/images/partners/1.jpg" alt=""></li>
+            <li class="partners-item"><img src="resources/images/partners/1.jpg" alt=""></li>
+            <li class="partners-item"><img src="resources/images/partners/1.jpg" alt=""></li>
+            <li class="partners-item"><img src="resources/images/partners/1.jpg" alt=""></li>
+            <li class="partners-item"><img src="resources/images/partners/1.jpg" alt=""></li>
+            <li class="partners-item"><img src="resources/images/partners/1.jpg" alt=""></li>
     </div>
     <button class="partners-btn partners-btn-prev" id="prev">&#10094;</button>
     <button class="partners-btn partners-btn-next" id="next">&#10095;</button>
@@ -97,3 +97,4 @@ document.getElementById('prev').addEventListener('click', () => {
 </script>
 </body>
 </html>
+
